# DataFed2

./: .bazelrc  .gitlab-ci.yml  BUILD.bazel  README.md  WORKSPACE.bazel
apps/: README.md
apps/client-cli/placeholder_python/: BUILD.bazel  README.md
apps/client-cli/placeholder_python/mypython/: mypython.py
apps/client-cli/placeholder_python/tests/: test_mypy.py
apps/core/: BUILD.bazel
apps/core/placeholder_src/: poco_placeholder.cpp
apps/web/javascript/: BUILD.bazel  index.js  package.json
apps/web/javascript/FastifyTemplate/: BUILD.bazel  README.md  config.js  package.json
apps/web/javascript/FastifyTemplate/routes/api/: BUILD.bazel
apps/web/javascript/PlaceHolder/: BUILD.bazel
apps/web/javascript/PlaceHolder/modules/: BUILD.bazel  calculator.js
apps/web/javascript/PlaceHolder/tests/: BUILD.bazel  test_calculator.spec.js
apps/web/javascript/modules/: BUILD.bazel
apps/web/javascript/tests/: BUILD.bazel
apps/worker/cpp/placeholder/: BUILD.bazel
apps/worker/cpp/placeholder/placeholder_src/: openssl_placeholder.cpp  placeholder.cpp
bazel/: bazel_deps.bzl
common/libs/placeholder_cpp_library/: BUILD.bazel
common/libs/placeholder_cpp_library/include/mytest/: placeholder_library.hpp
common/libs/placeholder_cpp_library/src/: placeholder_library.cpp
common/libs/placeholder_cpp_library/tests/unit/: test_returnOne.cpp
core/database/: README.md  file  index.js  manifest.json
core/database/api/: acl_router.js  coll_router.js  data_router.js  group_router.js  proj_router.js  query_router.js  repo_router.js  tag_router.js  task_router.js  user_router.js
core/database/scripts/: setup.js
core/scripts/: install_foxx.sh
gateway/: README.md  config.js  datafed_gateway_server.js  datafed_system_api.yaml  gateway_server.js  package-lock.json  package.json
gateway/openapi/: system_api.yaml
gateway/openapi/v2/: system_api.yaml
gateway/openapi/v2/components/parameters/: limit.yaml  offset.yaml
gateway/openapi/v2/components/responses/: default.yaml
gateway/openapi/v2/components/schemas/: access_rule.yaml  allocation.yaml  annotate.yaml  annotation.yaml  category.yaml  edge.yaml  folder.yaml  globus.yaml  group.yaml  project.yaml  record.yaml  relationship.yaml  repo.yaml  schema.yaml  search_criteria.yaml  search_saved.yaml  search_specification.yaml  task.yaml  token_grant.yaml  user.yaml
gateway/openapi/v2/paths/: access.yaml  alloc.yaml  annotate.yaml  auth.yaml  authn.yaml  catalog.yaml  folder.yaml  globus.yaml  group.yaml  project.yaml  record.yaml  repo.yaml  schema.yaml  search.yaml  shares.yaml  task.yaml  user.yaml
gateway/openapi/v2/routes/user/: who.yaml
gateway/openapi/v2/schema/: user.yaml
gateway/routes/v2/: access.js  alloc.js  annotate.js  anon.js  authn.js  catalog.js  folder.js  general.js  globus.js  group.js  project.js  record.js  repo.js  schema.js  search.js  shares.js  task.js  user.js
proto/web/server/fastify_openapi/: README.md  package-lock.json  package.json  server.js  testapi.yml
proto/web/server/fastify_openapi/views/: welcome.ejs
scripts/: create_self_signed_cert.sh  setup_test_env.sh
tests/core/database/performance/scripts/: config_load.sh  setup.sh
tests/core/database/scripts/: README.md  generate_email_domain_names.sh  generate_emails.sh  generate_usernames.sh  generate_uuids.sh
